put back some CSS that's sometimes necessary on IE noLayout mode (intermittent display bug).
git-svn-id: http://svn.dojotoolkit.org/src@5850 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/trunk/src/widget/templates/TabContainer.css
+++ b/trunk/src/widget/templates/TabContainer.css
@@ -10,14 +10,13 @@
 }
 
 .dojoTabLabels-top {
+	position : relative;
+	top : 0px;
+	left : 0px;
 	overflow : visible;
 	margin-bottom : -1px;
 	width : 100%;
 	z-index: 2;	/* so the bottom of the tab label will cover up the border of dojoTabPaneWrapper */
-}
-
-.dojoTabNoLayout {
-	display: block;
 }
 
 .dojoTabNoLayout.dojoTabLabels-top .dojoTab {
@@ -77,6 +76,9 @@
 /* bottom tabs */
 
 .dojoTabLabels-bottom {
+	position : relative;
+	bottom : 0px;
+	left : 0px;
 	overflow : visible;
 	margin-top : -1px;
 	width : 100%;
